# ladybug

./: .gitmodules  CMakeLists.txt  Makefile  pixi.toml
.github/: dependabot.yml
.github/workflows/: benchmark-workflow.yml  build-and-deploy-extension.yml  build-and-deploy.yml  build-extensions.yml  ci-musl-test-workflow.yml  ci-slim.yml  ci-workflow.yml  codeql.yml  deploy-extension.yml  gen-docs.yml  lsqb-benchmark-workflow.yml  nodejs-workflow.yml  precompiled-bin-workflow.yml  purge-extension.yml  python-wheel-workflow.yml  wasm-workflow.yml  zizmor.yml
cmake/: BundleStaticLibrary.cmake
docs/: art_index.md  icebug-disk.md
scripts/: migrate-lbug-db.py  run_pgembed_fixture.py
scripts/extension/: PRODUCTION_RELEASES
src/: CMakeLists.txt
src/binder/: expression_binder.cpp
src/c_api/: helpers.cpp  value.cpp  version.cpp
src/expression_evaluator/: reference_evaluator.cpp
src/extension/: CMakeLists.txt  extension.cpp  extension_installer.cpp
src/main/: client_context.cpp  database_manager.cpp  plan_printer.cpp
src/optimizer/: filter_push_down_optimizer.cpp  foreign_join_push_down_optimizer.cpp  projection_push_down_optimizer.cpp
src/processor/operator/aggregate/: CMakeLists.txt  base_aggregate.cpp  packed_filtered_count.cpp
src/storage/: storage_version_info.cpp
src/transaction/: transaction_manager.cpp
test/api/: CMakeLists.txt  arrow_rel_table_test.cpp
test/common/: CMakeLists.txt  extension_ca_cert_test.cpp
test/copy/: copy_test.cpp
test/runner/: cleanup_test.cpp
test/storage/: ice_disk_utils_test.cpp
tools/: CMakeLists.txt
(+67 files in other folders)
